methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:2: error: not found: value vuBiscuit
  vuBiscuit = false
  ^MethodsReturning:3: error: not found: value vuBiscuit
  while (!vuBiscuit){
          ^MethodsReturning:7: error: not found: value vuBiscuit
        vuBiscuit = true
        ^MethodsReturning:3: error: type mismatch;
 found   : Unit
 required: Boolean
  while (!vuBiscuit){
  ^