methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  vuBiscuit = false
  while (!vuBiscuit){
    for (i <- 0 to 5){
      avance()
      if(estSurBiscuit){
        vuBiscuit = true
      }
    }
  }
}